<resources>
    <string name="app_name">Test5</string>
    <string name="main_schedule_btn1">新建</string>
    <string name = "main_schedule_btn2">未完成</string>
    <string name="e_n">紧急\n重要</string>
    <string name="no_e_n">重要\n不紧急</string>
    <string name="e_no_n">紧急\n不重要</string>
    <string name="no_e_no_n">不紧急\n不重要</string>
    <string name="component_view_format">%1$d/%2$d</string>
    <string name="sub_target_gird_text1">推荐目标</string>
    <string name="sub_target_grid_text2">自定义目标</string>
    <string name="main_navigation_btn1">计划</string>
    <string name="main_navigation_btn2">视图</string>
    <string name="main_navigation_btn3">专注</string>
    <string name="main_navigation_btn4">我的</string>
    <string name="test_short">字符</string>
    <string name="test_medium">这是测试</string>
    <string name="test_long">这是测试字符，旨在提供长字符以观察适配情况</string>
    <string name="main_view_textView1">选择排序方式:</string>
    <string name="main_view_textView2">反转:</string>
    <string name="main_view_spinner_title">排序方式</string>
    <string name="progress_format">%1$d/%2$d</string>
    <string name="main_concentrate_btn1">开始专注</string>
    <string name="sub_setting_title">专注设置</string>
    <string name="sub_setting_btn1">优先设置</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="title">标题</string>
    <string name = "subTitle">子标题</string>
    <string name="type">类型</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="signup">注册</string>
    <string name="delete">删除</string>
</resources>