<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/main_viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">
    </androidx.viewpager.widget.ViewPager>
    <RadioGroup
        android:id="@+id/main_navigation_btnGroup"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_gravity="bottom">
        <RadioButton
            style="@style/main_navigation_radio_btn"
            android:id="@+id/main_navigation_btn0"

            android:text="@string/main_navigation_btn1"
            android:textSize="20sp"
            />

        <RadioButton
            style="@style/main_navigation_radio_btn"
            android:id="@+id/main_navigation_btn1"
            android:text="@string/main_navigation_btn2"
            android:textSize="20sp"/>

        <RadioButton
            style="@style/main_navigation_radio_btn"
            android:id="@+id/main_navigation_btn2"
            android:text="@string/main_navigation_btn3"
            android:textSize="20sp"/>
        <RadioButton
            style="@style/main_navigation_radio_btn"
            android:id="@+id/main_navigation_btn3"
            android:text="@string/main_navigation_btn4"
            android:textSize="20sp"/>


    </RadioGroup>
</LinearLayout>