<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_schedule"
    android:orientation="vertical">
    <AnalogClock
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_gravity="center"/>
    <TextClock
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="-30dp"
        android:layout_weight="0.5"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:format24Hour="h:mm:ss"
        android:format12Hour="h:mm:ss,aa"/>
    <include layout="@layout/component_divide_line"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:gravity="right"
                android:paddingRight="20dp"
                android:text="@string/main_schedule_btn1"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlHardcoded" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="3" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:paddingLeft="20dp"
                android:text="@string/main_schedule_btn2"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>







        <com.example.test5.components.MainScheduleView
            android:id="@+id/schedule_view_no_e_n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:background="@color/no_e_n"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/schedule_view_e_n"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8"
            app:title="@string/no_e_n"
            tools:ignore="RtlHardcoded" />
        <com.example.test5.components.MainScheduleView
            android:id="@+id/schedule_view_no_e_no_n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            tools:ignore="RtlHardcoded"
            app:title="@string/no_e_no_n"
            android:background="@color/no_e_no_n"
            app:layout_constraintTop_toTopOf="@id/schedule_view_no_e_n"
            app:layout_constraintLeft_toLeftOf="@id/schedule_view_e_no_n"
            />

        <com.example.test5.components.MainScheduleView
            android:id="@+id/schedule_view_e_n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/schedule_view_no_e_n"
            android:layout_alignParentLeft="true"
            android:background="@color/e_n"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintVertical_bias="0.4"
            app:title="@string/e_n"
            tools:ignore="RtlHardcoded" />

        <com.example.test5.components.MainScheduleView
            android:id="@+id/schedule_view_e_no_n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/schedule_view_no_e_no_n"
            android:layout_alignParentRight="true"
            android:background="@color/e_no_n"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/schedule_view_e_n"
            app:title="@string/e_no_n"
            tools:ignore="RtlHardcoded" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>